<?xml version="1.0"?>
<package format="2">
  <name>advance_demo</name>
  <version>0.0.0</version>
  <description>The advance_demo package</description>
  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="wangxiaoyun@iscas.ac.cn">Xiaoyun Wang</author>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="wangxiaoyun@iscas.ac.cn">Xiaoyun Wang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
