<package format="2">
  <name>xarm_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for xbot_arm</p>
    <p>This package contains configuration data, URDF file, 3D models and launch files
for XBot_arm.SLDASM robot</p>
  </description>
  <author>Wang Xiaoyun</author>
  <maintainer email="wangxiaoyun@iscas.ac.cn" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <depend>gazebo</depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
